--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,13 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/sweetalert2/dist/sweetalert2.css",
+
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/sweetalert2/dist/sweetalert2.js"
+            ]
           },
           "configurations": {
             "production": {
